k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/rewrite-target: /$1
        certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
        nginx.ingress.kubernetes.io/ssl-redirect: 'true' # make users use only https
spec:
    tls: 
        - hosts:
            - kubernetes-test.cf
            - www.kubernetes-test.cf
          secretName: kubernetes-test-cf # secret in k8s that store certificate
    rules:
        - host: kubernetes-test.cf
          http:
            paths:
                - path: /?(.*)
                  backend:
                    serviceName: client-cluster-ip-service
                    servicePort: 3000
                - path: /api/?(.*)
                  backend:
                    serviceName: server-cluster-ip-service
                    servicePort: 5000
        - host: www.kubernetes-test.cf
          http:
            paths:
                - path: /?(.*)
                backend:
                    serviceName: client-cluster-ip-service
                    servicePort: 3000
                - path: /api/?(.*)
                backend:
                    serviceName: server-cluster-ip-service
                    servicePort: 5000
